Disabled some stuff that's not relevant right now.  Added magnetometer calibration values into the config file on the SPIFFS.  This all seems to be working.

--- a/RocketTrackReceiver/data/receiver.ini
+++ b/RocketTrackReceiver/data/receiver.ini
@@ -56,6 +56,20 @@ Enable=1
 Type=LSM303DLHC
 MeasurementRate=1
 
+;; this is for the T-Beam on my 4 element Yagi
+Mag_A11=9.7436e-01
+Mag_A12=-2.2516e-03
+Mag_A13=-7.3596e-02
+Mag_A21=-2.2516e-03
+Mag_A22=1.1269e+00
+Mag_A23=3.0113e-03
+Mag_A31=-7.3596e-02
+Mag_A32=-3.0113e-03
+Mag_A33=9.9677e-01
+Mag_B1=-10.6583
+Mag_B2=8.0037
+Mag_B3=34.7096
+
 [Logging]
 Level=1
 
